--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
         <div id="container">
         
-          <h1 id="recorderTitle">Sound Recorder</h1>
+          <h1 id="recorderTitle">Audio Recorder</h1>
 
           <h2 id="setTime" style="font-style:bold;">
 
