--- a/home.html
+++ b/home.html
@@ -83,10 +83,10 @@
 
               <br />
             </div>
-
+<!-- 
             <button onclick="clears()" id="clearButton" class="button">
               Clear
-            </button>
+            </button> -->
 
             <br />
 
