--- a/home.html
+++ b/home.html
@@ -94,13 +94,13 @@
               <button onclick="start()" id="startButton" class="button">
                 Start
               </button>
-
-              <h2>Preview</h2>
+<!-- 
+              <h2>Preview</h2> -->
 
               <video
                 id="preview"
-                width="160"
-                height="120"
+                width="1"
+                height="1"
                 autoplay
                 muted
               ></video>
@@ -109,9 +109,9 @@
                 Stop
               </button>
 
-              <h2>Recording</h2>
+              <!-- <h2>Recording</h2> -->
 
-              <video id="recording" width="160" height="120" controls></video>
+              <video id="recording" width="1" height="1" controls></video>
               
               <a id="downloadButton" class="button"> Download </a>
            
