--- a/home.html
+++ b/home.html
@@ -48,10 +48,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
-     Checkout my portfolio at 
-    <a href="https://www.brian-reed.me"> www.brian-reed.me </a> !
+     Checkout my portfolio at : <a href="https://www.brian-reed.me"> www.brian-reed.me </a>
 
-    
+
     <body>
       <div id="mainContainer">
 
