--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
-     Checkout my portfolio at : <a href="https://www.brian-reed.me"> www.brian-reed.me </a>
+    <span> Checkout my portfolio at : <a href="https://www.brian-reed.me"> www.brian-reed.me </a></span>
 
 
     <body>
