added meta properties for external websites

--- a/home.html
+++ b/home.html
@@ -45,8 +45,12 @@
       rel="stylesheet"
     />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <meta property='og:title' content='Audio Recorder'/>
+    <meta property='og:image' content='https://repository-images.githubusercontent.com/452489611/89cff234-cfea-4433-8e34-4009fa32a3ea'/>
+    <meta property='og:description' content='An application that records audio and saves it as an MP3.'/>
+    <meta property='og:url' content='https://recorder-app.netlify.app/'/>
+  
+    
 
     <span> Checkout my portfolio at : <a href="https://www.brian-reed.me"> www.brian-reed.me </a></span>
 
