--- a/home.html
+++ b/home.html
@@ -113,9 +113,9 @@
 
                
               <a id="downloadButton" class="button"> Download </a>
-           <div id="visualization">
+           <!-- <div id="visualization">
              Audio Visualization Will Go Here
-           </div>
+           </div> -->
            
             <pre id="log"></pre>
             </div>
